--- a/vite-project/package.json
+++ b/vite-project/package.json
@@ -10,11 +10,9 @@
   },
   "devDependencies": {
     "sass": "^1.69.7",
-    "vite": "^5.0.8",
-    "vite-plugin-inspect": "^0.8.1"
+    "vite": "^5.0.8"
   },
   "dependencies": {
-    "collect.js": "^4.36.1",
     "normalize.css": "^8.0.1"
   }
 }
